fix: Fixed readability of code highlights in dark mode.

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -848,10 +848,11 @@ blockquote {
   margin: 0;
 }
 
-code {
+p>code {
   font-family: var(--font-mono);
   font-size: var(--type-small);
   background: var(--theme-mark);
+  color: var(--theme-background);
 }
 
 .notice {
